# PlotPilot

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  PlotPilot.bat  README.md  docker-compose.yml  pyproject.toml  ruff.toml  start.bat
.github/workflows/: backend-ci.yml  frontend-ci.yml
application/ai/: llm_control_service.py  local_llm_utils.py
application/core/services/: novel_service.py  scene_generation_service.py
application/engine/dag/: daemon_runner.py  narrative_intelligence.py
application/engine/services/: adaptive_retry.py  beat_middleware.py  bidirectional_mcts.py  diversity_branching.py  foreshadow_pool.py  iterative_writer.py  kg_cross_validator.py  mcts_quality_scorer.py  multi_resolution_planner.py  octopus_entropy.py  parallel_auditor.py  query_service.py  reflective_planner.py  shared_state_repository.py  smart_router.py  state_bootstrap.py  state_publisher.py  style_variation_guard.py  super_writer_pipeline.py  workflow_orchestrator.py  workflow_orchestrator_v2.py  writer_r1_mrpo.py
application/workspace/: __init__.py  local_workspace_service.py
application/world/services/: auto_bible_generator.py
docs/: SETUP.md
domain/engine/dag/: models.py
frontend/: package-lock.json  package.json  plotpilot-backend.spec  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: book.ts  chapterElement.ts  dag.ts  engineCore.ts  knowledge.ts  localWorkspace.ts  monitor.ts  narrativeEngine.ts  narrativeHealth.ts  planning.ts  propApi.ts  sandbox.ts  stats.ts  tools.ts  voice.ts  voiceDrift.ts  workflow.ts  worldbuilding.ts  worldline.ts
frontend/src/composables/: useAICompletion.ts  useFocusMode.ts  useLocalModelProbe.ts
frontend/src/plugins/: echarts.ts
frontend/src/router/: index.ts
frontend/src/stores/: autopilotWorkspaceStore.ts  localModelStore.ts  narrativeHealthStore.ts  statsStore.ts
frontend/src/utils/: llmPanelNormalize.ts  sseStream.ts
frontend/src/views/: Cast.vue  Chapter.vue  Corkboard.vue  Dashboard.vue  Home.vue  NarrativeHealth.vue
infrastructure/ai/: provider_factory.py
infrastructure/ai/providers/: openai_provider.py
infrastructure/persistence/database/: connection.py  sqlite_pragmas.py  triple_repository.py
infrastructure/persistence/storage/: file_storage.py
interfaces/: main.py
interfaces/api/: dependencies.py
interfaces/api/middleware/: error_handler.py
output/: novel-galaxy-route-ch1-3.md
scripts/: check_db.py  check_queue.py  cleanup_queue.py  probe_local_models.py  purge_ddl_queue_once.py  test_local_import.py
scripts/evaluation/: macro_planning_evaluator.py
(+69 files in other folders)
