[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plotpilot"
version = "3.0.0-alpha"
description = "PlotPilot（墨枢）— AI 辅助长篇小说创作叙事引擎内核"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "shenminglinyi", email = "112049634+shenminglinyi@users.noreply.github.com" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    # Web 框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    # 数据验证
    "pydantic>=2.0.0",
    # HTTP 客户端
    "httpx==0.27.0",
    # AI / LLM SDK
    "openai>=1.65.0,<2.0.0",
    "anthropic>=0.40.0",
    "volcengine-python-sdk[ark]>=1.0.0",
    # 工具库
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "json-repair>=0.30.0",
    # 导出
    "python-docx>=1.1.0",
    "ebooklib>=0.18",
    "lxml>=4.9.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
local = [
    "numpy>=1.21.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.5.0",
]
export = [
    "python-docx>=1.1.0",
    "ebooklib>=0.18",
    "fpdf2>=2.7.0",
]

[project.scripts]
plotpilot = "cli:main"
plotpilot-server = "interfaces.main:app"

[project.urls]
Homepage = "https://github.com/shenminglinyi/PlotPilot"
Repository = "https://github.com/shenminglinyi/PlotPilot.git"

[tool.hatch.build.targets.wheel]
packages = ["application", "domain", "engine", "infrastructure", "interfaces", "shared", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "-p", "no:warnings"]

[tool.pytest.ini_options.markers]
unit = "unit tests"
integration = "integration tests"
slow = "slow tests"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "S", "UP", "SIM", "RUF"]
ignore = ["E501", "S101", "S603", "S607", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603", "B008"]
"scripts/**" = ["S101", "S603"]

[tool.ruff.format]
quote-style = "single"
